<resources>
    <string name="app_name">PlantSensor</string>
    <string name="title_connection_problems">Connection problems</string>
    <string name="title_activity_logged_user">LoggedUserActivity</string>
    <string name="title_send_mail">SendMail</string>

    <string name="sharedpreferences_authentication">authentication</string>
    <string name="sharedpreferences_token">authToken</string>

    <string name="title_access">Informativa dell\'Utente</string>

    <string name="title_plant_state">Plant</string>
    <string name="title_weather_state">Weather</string>
    <string name="title_watering_state">Watering</string>
    <string name="title_health_state">Health</string>

    <string name="title_back">Back</string>

    <string name="title_streams_tab">Streams</string>
    <string name="title_favourites_tab">Favourites</string>
    <string name="title_plant_state_list">Plant State List</string>
    <string name="title_weather_state_list">Weather State List</string>
    <string name="title_health_state_list">Health State List</string>

    <string name="textview_plant_name">Plant Name</string>
    <string name="textview_plant_type">Plant Type</string>
    <string name="textview_plant_location">Plant Location</string>

    <string name="auth_login">Already registered? Log in now.</string>
    <string name="auth_signup">Not registered yet? Sign up now.</string>
    <string name="password_changed">Password is changed</string>
    <string name="password_changed_error">Insert valid passwords</string>

    <string name="connection_problems">You have some connection problems!</string>
    <string name="try_connect_again">Try connect again!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="action_settings">Settings</string>

    <string name="application_permission_information">
        "Questa Applicazione richiede permessi specifici"
        " sugli smartphone dei propri Utenti.\n\n"
        "Tipologie di Dati raccolti\n\n"
        "Fra i Dati Personali raccolti da questa Applicazione, in modo autonomo"
        " o tramite terze parti, ci sono: "
        "Permesso Camera;"
        " Permesso Localizzazione approssimativa (continua);"
        " Cookie;"
        " Dati di utilizzo;"
        " email;"
        " password;"
        " Essendo essi necessari al diretto funzionamento dell'app"
        " e non per essere usati per alcun trattamento dei dati"
        " (come la profilazione e marketing), per poter proseguire"
        " con il corretto funzionamento dell'app si bisogna di un vostro "
        " consenso.\n"
        "Grazie"</string>
    <string name="set_location">Set Location</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="set_plant_info">Set Plant Info</string>

    <string-array name="plantTypes">
        <item>Fiori Primaverili</item>
        <item>Fiori Autunnali</item>
        <item>Pianta Alimurgica</item>
        <item>Pianta Grassa</item>
        <item>Pianta Rampicante</item>
        <item>Pianta Sempreverde</item>
        <item>Pianta Tropicale</item>
    </string-array>
    <string-array name="plantLocation">
        <item>Isernia, Italy</item>
        <item>Roma, Italy</item>
        <item>Milano, Italy</item>
        <item>Torino, Italy</item>
        <item>Napoli, Italy</item>
        <item>Firenze, Italy</item>
        <item>Bologna, Italy</item>
    </string-array>

</resources>