<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_plant_state"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_plant_state" />

    <item
        android:id="@+id/navigation_weather_state"
        android:icon="@drawable/ic_person_pin_black_24dp"
        android:title="@string/title_weather_state" />

    <item
        android:id="@+id/navigation_watering_state"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/title_watering_state" />

    <item
        android:id="@+id/navigation_health_state"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_health_state" />

</menu>
